<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <Button
        android:id="@+id/num_dot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/num_zero"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/num_zero"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/zero"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toStartOf="@+id/num_back"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num_dot" />

    <Button
        android:id="@+id/num_back"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/num_equal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num_zero" />

    <Button
        android:id="@+id/num_equal"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/bt_equal_background"
        android:gravity="center"
        android:text="@string/equal"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/num_back" />

    <Button
        android:id="@+id/num_one"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/one"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_dot"
        app:layout_constraintStart_toStartOf="@+id/num_dot" />

    <Button
        android:id="@+id/num_two"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/two"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_zero"
        app:layout_constraintStart_toStartOf="@+id/num_zero" />

    <Button
        android:id="@+id/num_three"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/three"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_back"
        app:layout_constraintStart_toStartOf="@+id/num_back" />


    <Button
        android:id="@+id/num_plus"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/plus"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_equal"
        app:layout_constraintStart_toStartOf="@+id/num_equal" />

    <Button
        android:id="@+id/num_four"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/four"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_one"
        app:layout_constraintStart_toStartOf="@+id/num_one" />

    <Button
        android:id="@+id/num_five"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/five"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_two"
        app:layout_constraintStart_toStartOf="@+id/num_two" />

    <Button
        android:id="@+id/num_six"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/six"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_three"
        app:layout_constraintStart_toStartOf="@+id/num_three" />

    <Button
        android:id="@+id/num_min"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/min"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_plus"
        app:layout_constraintStart_toStartOf="@+id/num_plus" />

    <Button
        android:id="@+id/num_seven"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/seven"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_four"
        app:layout_constraintStart_toStartOf="@+id/num_four" />


    <Button
        android:id="@+id/num_eight"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/eight"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_five"
        app:layout_constraintStart_toStartOf="@+id/num_five" />


    <Button
        android:id="@+id/num_nine"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/nine"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_six"
        app:layout_constraintStart_toStartOf="@+id/num_six" />


    <Button
        android:id="@+id/num_mul"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/mul"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_min"
        app:layout_constraintStart_toStartOf="@+id/num_min" />


    <Button
        android:id="@+id/num_clear"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/clear"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/num_seven"
        app:layout_constraintStart_toStartOf="@+id/num_seven" />

    <Button
        android:id="@+id/num_start_bracket"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/start_bracket"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_eight"
        app:layout_constraintStart_toStartOf="@+id/num_eight" />

    <Button
        android:id="@+id/num_end_bracket"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/end_bracket"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_nine"
        app:layout_constraintStart_toStartOf="@+id/num_nine" />

    <Button
        android:id="@+id/num_div"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/bt_background"
        android:gravity="center"
        android:text="@string/div"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/num_mul"
        app:layout_constraintStart_toStartOf="@+id/num_mul" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hint="0"
        android:padding="4dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="56dp"
        app:layout_constraintBottom_toTopOf="@id/num_end_bracket"
        app:layout_constraintEnd_toEndOf="@id/num_div"
        app:layout_constraintStart_toStartOf="@id/num_clear" />

    <TextView
        android:id="@+id/placeholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:cursorVisible="true"
        android:hint="@string/_0"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textCursorDrawable="@null"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_answer"
        app:layout_constraintEnd_toEndOf="@+id/tv_answer"
        app:layout_constraintStart_toStartOf="@+id/tv_answer"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextViewEdits" />
</androidx.constraintlayout.widget.ConstraintLayout>